969: Fix different image width on IE11

--- a/source/assets/css/content/_image.scss
+++ b/source/assets/css/content/_image.scss
@@ -42,7 +42,7 @@ img.full-span {
 }
 
 img.image-inline {
-	max-width: 100%;
+	max-width: 183px;
 }
 
 .img__caption {
